# AutoDock-Vina

./: CMakeLists.txt
src/cuvina/: bfgs.cu  conf_c.cuh  context.h  cuda_context.h  cuvina.cpp  cuvina.h  design.md  model_c.cuh  vinautil.h
src/lib/: ad4cache.h  coords.cpp  grid.cpp  monte_carlo.cpp  quasi_newton.cpp
src/main/: main.cpp
test/: cpu.sh  gpu.sh
